2001-08-24  Kingpin  <mthurn@tasc.com>

	* lib/I18N/Charset.pm: new IANA charset list

2001-06-05  Kingpin  <mthurn@tasc.com>

	* 1.09 released

2001-06-04  Kingpin  <mthurn@tasc.com>

	* lib/I18N/Charset.pm: new IANA charset list in __DATA__; update code & tests to match

2001-04-19  Kingpin  <mthurn@tasc.com>

	* lib/I18N/Charset.pm: removed some incorrect aliases (thanks to Liam Quinn)

2001-03-08  Kingpin  <mthurn@tasc.com>

	* 1.07 released

2001-03-07  Kingpin  <mthurn@tasc.com>

	* README: mention maputf8 tests are skipped

	* lib/I18N/Charset.pm (try_list): be more forgiving during ALL lookups

2001-03-06  Kingpin  <mthurn@tasc.com>

	* 1.06 released

2001-03-05  Kingpin  <mthurn@tasc.com>

	* lib/I18N/Charset.pm: added support for Unicode::Map

2001-01-08  Kingpin  <mthurn@tasc.com>

	* 1.05 released (fixed pod)

1999-07-09  Kingpin  <mthurn@tasc.com>

	* 1.03 released (no code changes, just cleaned up the distribution)

1998-07-29  Kingpin  <mthurn@tasc.com>

	* 1.02 tests don't complain if Unicode::Map8 is not installed;
		a few tiny documentation changes

1998-07-16  Kingpin  <mthurn@tasc.com>

	* 1.01 first released version

